services/showroom/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: showroom
  labels:
    app.kubernetes.io/part-of: nvidia-ida
