services/showroom/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showroom
  namespace: showroom
  labels:
    app: showroom
spec:
  selector:
    app: showroom
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
