services/showroom/deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: showroom
  namespace: rhoai-agentic
  labels:
    app: showroom
spec:
  host: aegis.apps.virt.na-launch.com
  to:
    kind: Service
    name: showroom
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
